dev/manifests/3rd-party/redis-ha/redis-ha-network-policy.yml
---
# Source: xxxxx/templates/redis-ha-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ha-extra-egress
  annotations:
    pia-team.com/role: pia.k8s.redis-ha/0.4.1
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
  podSelector:
    matchLabels:
      app: redis-ha-haproxy
  policyTypes:
  - Egress
